--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>My project</title>
 </head>
 <body>
+    <!-- Lien du fichier CSS compilé via SASS et Bootsrap -->
+    <link rel="stylesheet" href="css/style.css" />
+
     <!-- Ajout de Babel pour transpiler le code JS (adaptations plus anciennes) : -->
     <script src="/polyfill.bundle.js"></script>
     <!-- Appel du package bundle.js (minifiy, package, sépare en fichiers, accès à des bibliothèques) : -->
