--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <!-- Une page de vue sous forme de liste, montrant tous les articles disponibles à la vente ; -->
+<!-- Une seule catégorie de produits sera présentée : les caméras. -->
 
 <body>
     <!-- En tête de page. -->
@@ -34,7 +35,7 @@
                             <h2 class="text-black">Liens</h2>
                             <ul class="list-unstyled">
                                 <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                                <li><a href="page-panier.html" class="purpleORI disable-link"><em>Votre panier</em></a>
+                                <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre panier</em></a>
                                 </li>
                             </ul>
                         </div>
@@ -61,10 +62,10 @@
 
     <!-- Centre de page : articles. -->
     <main>
-        <div class="album py-4 bg-light"></div>
+        <div class="py-4"></div>
         <div class="container">
 
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 bg-pinkORI px-5">
 
                 <div class="col">
                     <div class="card shadow-sm">
@@ -76,14 +77,16 @@
                         </img>
 
                         <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ad
-                                autem quidem? Et harum temporibus excepturi ex tempora, voluptate eius reprehenderit.
-                                Molestiae, ipsum doloribus nostrum mollitia dolor dolorem odio nobis?.</p>
+                            <h3 class="display-6">Caméra HXDV</h3>
+                            <h4>259€</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
+                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
+                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button"
-                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir nos
-                                        caméras</button>
+                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
+                                        caméra</button>
                                 </div>
                             </div>
                         </div>
@@ -92,22 +95,24 @@
 
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img src="img/oak_1.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
-                            alt="vente en ligne, mobiliers" xmlns="http://www.w3.org/2000/svg" role="img"
-                            aria-label="Placeholder: Mobiliers" preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <img src="img/vcam_2.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
+                            alt="vente en ligne, caméra vintage" xmlns="http://www.w3.org/2000/svg" role="img"
+                            aria-label="Placeholder: Caméras" preserveAspectRatio="xMidYMid slice" focusable="false">
                         <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                             dy=".3em"></text>
                         </img>
 
                         <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ad
-                                autem quidem? Et harum temporibus excepturi ex tempora, voluptate eius reprehenderit.
-                                Molestiae, ipsum doloribus nostrum mollitia dolor dolorem odio nobis?.</p>
+                            <h3 class="display-6">Caméra HXVD</h3>
+                            <h4>299€</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
+                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
+                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button"
-                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir nos
-                                        meubles</button>
+                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
+                                        caméra</button>
                                 </div>
                             </div>
                         </div>
@@ -116,34 +121,87 @@
 
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img src="img/teddy_4.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
-                            alt="vente en ligne, ours en peluche" xmlns="http://www.w3.org/2000/svg" role="img"
-                            aria-label="Placeholder: Ours en peluche" preserveAspectRatio="xMidYMid slice"
-                            focusable="false">
+                        <img src="img/vcam_3.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
+                            alt="vente en ligne, caméra vintage" xmlns="http://www.w3.org/2000/svg" role="img"
+                            aria-label="Placeholder: Caméras" preserveAspectRatio="xMidYMid slice" focusable="false">
                         <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                             dy=".3em"></text>
                         </img>
 
                         <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
-                                pariatur culpa. Porro debitis corrupti tenetur beatae consequuntur provident laboriosam
-                                sint, fugiat vel. Alias consequuntur consectetur pariatur nisi asperiores dicta ullam.
-                            </p>
+                            <h3 class="display-6">>Caméra DVHX</h3>
+                            <h4>499€</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
+                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
+                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button"
-                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir nos
-                                        ours</button>
+                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
+                                        caméra</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="img/vcam_4.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
+                            alt="vente en ligne, caméra vintage" xmlns="http://www.w3.org/2000/svg" role="img"
+                            aria-label="Placeholder: Caméras" preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+                            dy=".3em"></text>
+                        </img>
+
+                        <div class="card-body">
+                            <h3 class="display-6">Caméra VDHX</h3>
+                            <h4>289€</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
+                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
+                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button"
+                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
+                                        caméra</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="img/vcam_5.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
+                            alt="vente en ligne, caméra vintage" xmlns="http://www.w3.org/2000/svg" role="img"
+                            aria-label="Placeholder: Caméras" preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+                            dy=".3em"></text>
+                        </img>
+
+                        <div class="card-body">
+                            <h3 class="display-6">Caméra HDVX</h3>
+                            <h4>239€</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
+                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
+                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button"
+                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
+                                        caméra</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
     </main>
 
     <!-- Bas de page. -->
     <footer class="mt-5">
-        <div class="container py-4 bg-pinkORI">
+        <div class="container py-4 px-5 bg-pinkORI">
             <span class="orangeORI ms-2"><em><a href="mailto:mag@orinoco.fr"
                         class="purpleORI disable-link">mag@orinoco.fr</a> -- Mentions légales -- Livraisons et retours
                     -- Aides et informations</em></span>
