--- a/01-produit.html
+++ b/01-produit.html
@@ -43,7 +43,7 @@
             <div class="navbar navbar-dark bg-pinkORI box-shadow">
                 <div class="container d-flex justify-content-between">
                     <a href="#" class="navbar-brand d-flex align-items-center">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="index.html">
                             <img class="ms-3" src="img/logo-orinoco.jpg" title="titre du site e-commerce"
                                 alt="vente internationale, meilleurs achats, site web, proposition de produits" />
                         </a>
@@ -57,7 +57,7 @@
         </navbar>
     </header>
 
-    
+
     <!-- Bas de page. -->
     <footer class="mt-5">
         <div class="container py-4 px-5 bg-pinkORI">
