--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <!-- Les balises de liens -->
     <link rel="canonical" href="https://florian75011.github.io/P5_rouanet_florian_04062021/index.html" />
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
-    <!-- Lien du fichier CSS compilé via SASS et Bootsrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- Lien du fichier CSS compilé avec SASS "compressed" et Bootsrap -->
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <!-- Une page de vue sous forme de liste, montrant tous les articles disponibles à la vente ; -->
@@ -45,8 +43,9 @@
             <div class="navbar navbar-dark bg-pinkORI box-shadow">
                 <div class="container d-flex justify-content-between">
                     <a href="#" class="navbar-brand d-flex align-items-center">
-                        <a class="navbar-brand" href="#">
-                            <img class="ms-3" src="img/logo-orinoco.jpg" title="titre du site e-commerce"
+                        <a class="navbar-brand" href="index.html">
+                            <img class="ms-3" src="img/logo-orinoco.jpg" href="index.html"
+                                title="titre du site e-commerce"
                                 alt="vente internationale, meilleurs achats, site web, proposition de produits" />
                         </a>
                     </a>
@@ -58,7 +57,6 @@
             </div>
         </navbar>
     </header>
-
 
     <!-- Centre de page : articles. -->
     <main>
@@ -84,9 +82,11 @@
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button"
-                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
-                                        caméra</button>
+                                    <a href="01-produit.html">
+                                        <button type="button"
+                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -110,9 +110,11 @@
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button"
-                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
-                                        caméra</button>
+                                    <a href="01-produit.html">
+                                        <button type="button"
+                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -129,16 +131,18 @@
                         </img>
 
                         <div class="card-body">
-                            <h3 class="display-6">>Caméra DVHX</h3>
+                            <h3 class="display-6">Caméra DVHX</h3>
                             <h4>499€</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
                                 quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button"
-                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
-                                        caméra</button>
+                                    <a href="01-produit.html">
+                                        <button type="button"
+                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -162,9 +166,11 @@
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button"
-                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
-                                        caméra</button>
+                                    <a href="01-produit.html">
+                                        <button type="button"
+                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -188,9 +194,11 @@
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button"
-                                        class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre
-                                        caméra</button>
+                                    <a href="01-produit.html">
+                                        <button type="button"
+                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
