--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
                 </div>
             </div>
         </navbar>
+
+        <aside>
+            <div class="alert alert-dark alert-dismissible fade show mt-2 bg-pinkORI" role="alert">
+                <span class="alert-heading">Découvrez notre produit en cliquant sur le bouton associé !</span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">X</span>
+                </button>
+            </div>
+        </aside>
     </header>
 
     <!-- Centre de page : articles. -->
@@ -75,8 +84,8 @@
                         </img>
 
                         <div class="card-body">
-                            <h3 class="display-6">Caméra HXDV</h3>
-                            <h4>259€</h4>
+                            <h3 class="display-6 text-center">Caméra HXDV</h3>
+                            <h4 class="text-center">259€</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
                                 quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
@@ -103,8 +112,8 @@
                         </img>
 
                         <div class="card-body">
-                            <h3 class="display-6">Caméra HXVD</h3>
-                            <h4>299€</h4>
+                            <h3 class="display-6 text-center">Caméra HXVD</h3>
+                            <h4 class="text-center">299€</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
                                 quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
@@ -131,8 +140,8 @@
                         </img>
 
                         <div class="card-body">
-                            <h3 class="display-6">Caméra DVHX</h3>
-                            <h4>499€</h4>
+                            <h3 class="display-6 text-center">Caméra DVHX</h3>
+                            <h4 class="text-center">499€</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
                                 quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
@@ -159,8 +168,8 @@
                         </img>
 
                         <div class="card-body">
-                            <h3 class="display-6">Caméra VDHX</h3>
-                            <h4>289€</h4>
+                            <h3 class="display-6 text-center">Caméra VDHX</h3>
+                            <h4 class="text-center">289€</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
                                 quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
@@ -187,8 +196,8 @@
                         </img>
 
                         <div class="card-body">
-                            <h3 class="display-6">Caméra HDVX</h3>
-                            <h4>239€</h4>
+                            <h3 class="display-6 text-center">Caméra HDVX</h3>
+                            <h4 class="text-center">239€</h4>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
                                 quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
                                 repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
