--- a/03-confirmation.html
+++ b/03-confirmation.html
@@ -4,12 +4,13 @@
 <head>
     <title>Orinoco - Site e-commerce, boutique en ligne.</title>
     <!-- L'ensemble des balises metas -->
+    <meta charset='utf-8'>
     <meta name="keywords" content="Orinoco, site e-commerce, achats en ligne, site web, stratégie marketing, France">
     <meta name="description" content="Orinoco est un site e-commerce de vente de produits en ligne.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow">
     <!-- Les balises de liens -->
-    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png">
     <!-- Lien du fichier CSS compilé via SASS et Bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -33,7 +34,7 @@
                             <h2 class="text-black">Liens</h2>
                             <ul class="list-unstyled">
                                 <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                                <li><a href="page-panier.html" class="purpleORI disable-link"><em>Votre panier</em></a>
+                                <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre panier</em></a>
                                 </li>
                             </ul>
                         </div>
@@ -44,7 +45,7 @@
                 <div class="container d-flex justify-content-between">
                     <a href="#" class="navbar-brand d-flex align-items-center">
                         <a class="navbar-brand" href="index.html">
-                            <img class="ms-3" src="img/logo-orinoco.jpg" title="titre du site e-commerce"
+                            <img class="ms-3" src="images/logo-orinoco.jpg" title="titre du site e-commerce"
                                 alt="vente internationale, meilleurs achats, site web, proposition de produits" />
                         </a>
                     </a>
