--- a/02-panier.html
+++ b/02-panier.html
@@ -4,12 +4,13 @@
 <head>
   <title>Orinoco - Site e-commerce, boutique en ligne.</title>
   <!-- L'ensemble des balises metas -->
+  <meta charset='utf-8'>
   <meta name="keywords" content="Orinoco, site e-commerce, achats en ligne, site web, stratégie marketing, France">
   <meta name="description" content="Orinoco est un site e-commerce de vente de produits en ligne.">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="robots" content="index, follow">
   <!-- Les balises de liens -->
-  <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
+  <link rel="shortcut icon" type="image/png" href="./images/favicon.png">
   <!-- Lien du fichier CSS compilé via SASS et Bootsrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -33,7 +34,7 @@
               <h2 class="text-black">Liens</h2>
               <ul class="list-unstyled">
                 <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                <li><a href="panier.html" class="purpleORI disable-link"><em>Votre panier</em></a>
+                <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre panier</em></a>
                 </li>
               </ul>
             </div>
@@ -44,7 +45,7 @@
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center">
             <a class="navbar-brand" href="index.html">
-              <img class="ms-3" src="img/logo-orinoco.jpg" title="titre du site e-commerce"
+              <img class="ms-3" src="images/logo-orinoco.jpg" title="titre du site e-commerce"
                 alt="vente internationale, meilleurs achats, site web, proposition de produits" />
             </a>
           </a>
@@ -58,122 +59,131 @@
   </header>
 
   <main>
-    <!-- Mise en page avec formulaire-->
-    <h2 class="mt-5">Formulaire client</h2>
-    <form class="row g-3">
-      <div class="col-12">
-        <label for="inputEmail4" class="form-label">Email</label>
-        <input type="email" class="form-control" id="inputEmail4">
-      </div>
-      <div class="col-12">
-        <label for="inputAddress" class="form-label">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-      </div>
-      <div class="col-12">
-        <label for="inputAddress2" class="form-label">Address 2</label>
-        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-      </div>
-      <div class="col-md-6">
-        <label for="inputCity" class="form-label">City</label>
-        <input type="text" class="form-control" id="inputCity">
-      </div>
-      <div class="col-md-4">
-        <label for="inputState" class="form-label">State</label>
-        <select id="inputState" class="form-select">
-          <option selected>Choose...</option>
-          <option>...</option>
-        </select>
-      </div>
-      <div class="col-md-2">
-        <label for="inputZip" class="form-label">Zip</label>
-        <input type="text" class="form-control" id="inputZip">
-      </div>
-      <div class="col-12">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="gridCheck">
-          <label class="form-check-label" for="gridCheck">
-            Check me out
-          </label>
-        </div>
-      </div>
-      <div class="col-12">
-        <button type="submit" class="btn btn-primary">Sign in</button>
-      </div>
-    </form>
+  <section>
+      <section class="container p-4 bg-pinkORI mb-4" style="padding: 1rem; box-sizing: border-box; border-width: 0; border-style: solid; border-color: #e5e7eb;">
+        <h2 class="text-lg font-bold mb-3">Panier et carte pour procéder au paiement :</h2>
 
-    <!-- Côté serveur -->
-    <h2 class="mt-5">Formulaire côté serveur</h2>
-    <form class="row g-3">
-      <div class="col-md-4">
-        <label for="validationServer01" class="form-label">First name</label>
-        <input type="text" class="form-control is-valid" id="validationServer01" value="Mark" required>
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-      </div>
-      <div class="col-md-4">
-        <label for="validationServer02" class="form-label">Last name</label>
-        <input type="text" class="form-control is-valid" id="validationServer02" value="Otto" required>
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-      </div>
-      <div class="col-md-4">
-        <label for="validationServerUsername" class="form-label">Username</label>
-        <div class="input-group has-validation">
-          <span class="input-group-text" id="inputGroupPrepend3">@</span>
-          <input type="text" class="form-control is-invalid" id="validationServerUsername"
-            aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
-          <div id="validationServerUsernameFeedback" class="invalid-feedback">
-            Please choose a username.
+        <table class="border-collapse w-full" style="width: 100%; text-indent: 0; border-color: inherit; box-sizing: border-box; border-width: 0; border-style: solid;">
+          <thead>
+            <tr class="border bg-white">
+              <th class="py-2">Produit</th>
+              <th>Quantité</th>
+              <th>Prix</th>
+              <th>Prix total</th>
+            </tr>
+          </thead>
+
+          <tbody id="">
+            <template id="">
+              <tr class="border bg-white rounded">
+                <td id="" class="text-center p-0 py-2">Caméra</td>
+                <td class="text-center p-0">
+                  <form class="flex">
+                    <!-- <select
+                      id="productQuantity"
+                      class="border border-indigo-200 rounded text-center w-full block pl-3 pr-10 py-1 text-base focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm z-10"
+                      name="quantity"
+                      id="quantity"
+                    >
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                    </select> -->
+                  </form>
+                </td>
+                <td id="" class="text-center p-0">X€</td>
+                <td id="" class="text-center p-0">x€</td>
+              </tr>
+            </template>
+            <tr class="bg-gray-100">
+              <td colspan="3" class="text-center py-2">Total</td>
+              <td class="text-center" id="">X€</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      
+  </section>
+
+    <section>
+    <div class="container bg-pinkORI mt-4 p-4">
+      <h2>Formulaire pour passer commande :</h2>
+      <form class="needs-validation" novalidate>
+        <div class="form-row">
+          <div class="col-md-4 mb-3">
+            <label for="prenom">Prénom</label>
+            <input type="text" class="form-control" id="prenom" placeholder="Pierre" required>
+            <div class="valid-feedback">Okay !</div>
+            <div class="invalid-feedback">Valeur incorrecte</div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="nom">Nom de famille</label>
+            <input type="text" class="form-control" id="nom" placeholder="Giraud" required>
+            <div class="valid-feedback">Okay !</div>
+            <div class="invalid-feedback">Valeur incorrecte</div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="pseudo">Pseudonyme</label>
+            <input type="text" class="form-control" id="pseudo" placeholder="PierreGird" required>
+            <div class="valid-feedback">Okay !</div>
+            <div class="invalid-feedback">Valeur incorrecte</div>
           </div>
         </div>
-      </div>
-      <div class="col-md-6">
-        <label for="validationServer03" class="form-label">City</label>
-        <input type="text" class="form-control is-invalid" id="validationServer03"
-          aria-describedby="validationServer03Feedback" required>
-        <div id="validationServer03Feedback" class="invalid-feedback">
-          Please provide a valid city.
+        <div class="form-group col-md-4 mb-3">
+          <label for="email">Entrez votre mail</label>
+          <input type="email" class="form-control" id="email" placeholder="pierre.giraud@edhec.com">
         </div>
-      </div>
-      <div class="col-md-3">
-        <label for="validationServer04" class="form-label">State</label>
-        <select class="form-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback"
-          required>
-          <option selected disabled value="">Choose...</option>
-          <option>...</option>
-        </select>
-        <div id="validationServer04Feedback" class="invalid-feedback">
-          Please select a valid state.
-        </div>
-      </div>
-      <div class="col-md-3">
-        <label for="validationServer05" class="form-label">Zip</label>
-        <input type="text" class="form-control is-invalid" id="validationServer05"
-          aria-describedby="validationServer05Feedback" required>
-        <div id="validationServer05Feedback" class="invalid-feedback">
-          Please provide a valid zip.
-        </div>
-      </div>
-      <div class="col-12">
-        <div class="form-check">
-          <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3"
-            aria-describedby="invalidCheck3Feedback" required>
-          <label class="form-check-label" for="invalidCheck3">
-            Agree to terms and conditions
-          </label>
-          <div id="invalidCheck3Feedback" class="invalid-feedback">
-            You must agree before submitting.
+        <div class="form-row">
+          <div class="col-md-4 mb-3">
+            <label for="ville">Ville</label>
+            <input type="text" class="form-control" id="ville" placeholder="Ville" required>
+            <div class="valid-feedback">Okay !</div>
+            <div class="invalid-feedback">Valeur incorrecte</div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="pays">Pays</label>
+            <input type="text" class="form-control" id="pays" placeholder="Pays" required>
+            <div class="valid-feedback">Okay !</div>
+            <div class="invalid-feedback">Valeur incorrecte</div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="cp">Code postal</label>
+            <input type="number" class="form-control" id="cp" placeholder="Code postal" required>
+            <div class="valid-feedback">Okay !</div>
+            <div class="invalid-feedback">Valeur incorrecte</div>
           </div>
         </div>
-      </div>
-      <div class="col-12">
-        <button class="btn btn-primary" type="submit">Submit form</button>
-      </div>
-    </form>
+        <div class="form-group">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="cgu" required>
+            <label class="form-check-label" for="cgu">J'accepte les conditions générales d'utilisation et de
+              vente</label>
+            <div class="invalid-feedback">Vous devez accepter les CGU pour continuer</div>
+          </div>
+        </div>
+        <button class="btn bg-purpleORI text-white mt-2 ms-2" type="submit">Envoyer le formulaire au site !</button>
+      </form>
+    </div>
+    <script>
+      /*La fonction principale de ce script est d'empêcher l'envoi du formulaire si un champ a été mal rempli et d'appliquer les styles de validation aux différents éléments de formulaire*/
+      (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+          let forms = document.getElementsByClassName('needs-validation');
+          let validation = Array.prototype.filter.call(forms, function (form) {
+            form.addEventListener('submit', function (event) {
+              if (form.checkValidity() === false) {
+                event.preventDefault();
+                event.stopPropagation();
+              }
+              form.classList.add('was-validated');
+            }, false);
+          });
+        }, false);
+      })();
+    </script>
+    </section>
+
   </main>
-
 
   <!-- Bas de page. -->
   <footer class="mt-5">
