--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <title>Orinoco - Site e-commerce, boutique en ligne.</title>
     <!-- L'ensemble des balises metas -->
+    <meta charset='utf-8'>
     <meta name="keywords" content="Orinoco, site e-commerce, achats en ligne, site web, stratégie marketing, France">
     <meta name="description" content="Orinoco est un site e-commerce de vente de produits en ligne.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow">
     <!-- Les balises de liens -->
     <link rel="canonical" href="https://florian75011.github.io/P5_rouanet_florian_04062021/index.html" />
-    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="./images.png">
     <!-- Lien du fichier CSS compilé avec SASS "compressed" et Bootsrap -->
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -44,7 +45,7 @@
                 <div class="container d-flex justify-content-between">
                     <a href="#" class="navbar-brand d-flex align-items-center">
                         <a class="navbar-brand" href="index.html">
-                            <img class="ms-3" src="img/logo-orinoco.jpg" href="index.html"
+                            <img class="ms-3" src="images/logo-orinoco.jpg" href="index.html"
                                 title="titre du site e-commerce"
                                 alt="vente internationale, meilleurs achats, site web, proposition de produits" />
                         </a>
@@ -61,7 +62,7 @@
             <div class="alert alert-dark alert-dismissible fade show mt-2 bg-pinkORI" role="alert">
                 <span class="alert-heading">Découvrez notre produit en cliquant sur le bouton associé !</span>
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">X</span>
+                    <span aria-hidden="true">X</span>
                 </button>
             </div>
         </aside>
@@ -73,146 +74,8 @@
         <div class="container">
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 bg-pinkORI px-5">
-
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="img/vcam_1.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
-                            alt="vente en ligne, caméra vintage" xmlns="http://www.w3.org/2000/svg" role="img"
-                            aria-label="Placeholder: Caméras" preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                            dy=".3em"></text>
-                        </img>
-
-                        <div class="card-body">
-                            <h3 class="display-6 text-center">Caméra HXDV</h3>
-                            <h4 class="text-center">259€</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
-                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a href="01-produit.html">
-                                        <button type="button"
-                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="img/vcam_2.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
-                            alt="vente en ligne, caméra vintage" xmlns="http://www.w3.org/2000/svg" role="img"
-                            aria-label="Placeholder: Caméras" preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                            dy=".3em"></text>
-                        </img>
-
-                        <div class="card-body">
-                            <h3 class="display-6 text-center">Caméra HXVD</h3>
-                            <h4 class="text-center">299€</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
-                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a href="01-produit.html">
-                                        <button type="button"
-                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="img/vcam_3.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
-                            alt="vente en ligne, caméra vintage" xmlns="http://www.w3.org/2000/svg" role="img"
-                            aria-label="Placeholder: Caméras" preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                            dy=".3em"></text>
-                        </img>
-
-                        <div class="card-body">
-                            <h3 class="display-6 text-center">Caméra DVHX</h3>
-                            <h4 class="text-center">499€</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
-                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a href="01-produit.html">
-                                        <button type="button"
-                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="img/vcam_4.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
-                            alt="vente en ligne, caméra vintage" xmlns="http://www.w3.org/2000/svg" role="img"
-                            aria-label="Placeholder: Caméras" preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                            dy=".3em"></text>
-                        </img>
-
-                        <div class="card-body">
-                            <h3 class="display-6 text-center">Caméra VDHX</h3>
-                            <h4 class="text-center">289€</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
-                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a href="01-produit.html">
-                                        <button type="button"
-                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="img/vcam_5.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"
-                            alt="vente en ligne, caméra vintage" xmlns="http://www.w3.org/2000/svg" role="img"
-                            aria-label="Placeholder: Caméras" preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                            dy=".3em"></text>
-                        </img>
-
-                        <div class="card-body">
-                            <h3 class="display-6 text-center">Caméra HDVX</h3>
-                            <h4 class="text-center">239€</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                                quibusdam veniam, quia amet quidem iusto accusamus. Voluptate et, itaque dolores
-                                repudiandae doloremque maxime optio ex veritatis adipisci, nemo, est eius!</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a href="01-produit.html">
-                                        <button type="button"
-                                            class="btn btn-lg btn-outline-secondary btn-outline-ORI">Découvrir notre caméra
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            </div>
+        </div>
 
     </main>
 
@@ -242,10 +105,12 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
 
-    <!-- Ajout des fichiers JS par leur source -->
-    <script src="./app.js"></script>
+
     <script src="./src/index.js"></script>
     <script src="./src/query.js"></script>
+    <!-- Ajout des fichiers JS par leur source
+    <script src="./app.js"></script>
+ 
     <script src="./server.js"></script>
 
     <script src="./controllers/camera.js"></script>
@@ -258,7 +123,7 @@
 
     <script src="./routes/"></script>
     <script src="./routes/"></script>
-    <script src="./routes/"></script>
+    <script src="./routes/"></script> -->
 </body>
 
 </html>
